@@ -1,3 +1,15 @@
+2017-02-09  Devin Rousso  <dcrousso+webkit@gmail.com>
+
+        Web Inspector: Option+hover on -webkit-transform in Styles sidebar underlines only half the property
+        https://bugs.webkit.org/show_bug.cgi?id=167949
+
+        Reviewed by Joseph Pecoraro.
+
+        * UserInterface/Controllers/CodeMirrorTokenTrackingController.js:
+        (WebInspector.CodeMirrorTokenTrackingController.prototype._updateHoveredTokenInfo):
+        Attempt to merge tokens (specifically the `text` and `start` values) if the either the 
+        previous or next token is of the type "meta".
+
 2017-02-09  Eric Carlson  <eric.carlson@apple.com>
 
         [MediaStream] Remove legacy Navigator.webkitGetUserMedia
